@startuml

class Person {
- Long id
- String firstName
- String lastName
- LocalDate birthday
}

class CrewMember {
- Long id
- String role
- Tour tour
- Person person
}

class Tour {
- Long id
- String desc
- TourState tourState
- Boat boat
- RouteEntry routeEntry
}

class RouteEntry{
- Long id
- Location location
- Tour tour
}

class TourState {
- Long id
- String state
}

note left: FINISHED\nPLANNED\nCANCELLED

class Location {
- Long id
- String desc
- float longitude
- float latitude
}

class Boat {
- Long id
- String name
- BoatType boatType
- BoatState boatState
}

class BoatState {
- Long id
- String state
}

note top: BOOKED\nDEFECT\nNOT AVAILABLE\nAVAILABLE

class BoatType {
- Long id
- String type
}
note right: ZWEIER\nDREIER\nVIERER\nFÜNFER\nACHTER\nANDERE

Person "1" <-- "*" CrewMember
CrewMember "*" --> "1" Tour
TourState "1" -right-> "*" Tour
Location "1" <-up- "*" RouteEntry
RouteEntry "*" -up-> "1" Tour
Tour "*" -right-> "1" Boat
Boat "*" -right-> "1" BoatType
Boat "1" -up-> "1" BoatState

@enduml
